@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0

class MoneyDiceGame {
    -dm : DiceManager
    -pm : PlayerManager
    -gm : GUIManager
    -player1 : Player
    -player2 : Player
    -diceCup : DiceCup
    -isPlaying : boolean
    -debug : boolean

    +main() : void
    -play() : void
    -playerPlay(player:Player) : void
}

class GUIManager {
    -gui : GUI

    +GUIManager()
    +closeGUI() : void
    +updateDice(faceValue1:int, faceValue2:int) : void
    +showMessage(message:String) : void
    +askPrompt(question:String) : boolean
    +waitUserRoll(playerName:String) : void
    +createGUIPlayer(startingBalance:int) : GUI_Player
}

package diplomitdtu.matadorgui {}

'package diplomitdtu.matadorgui.gui_main {
'    class GUI {
''        +GUI(fields:GUI_Field[], backGroundColor:Color)
''        +close() : void
''        +setDice(faceValue1:int, faceValue2:int) : void
''        +showMessage(msg:String) : void
''        +getUserLeftButtonPressed(msg:String, trueButton:String, falseButton:String) : boolean
''        +getUserString(msg:String) : String
''        +addPlayer(player:GUI_Player) : void
'    }
'}



'package diplomitdtu.matadorgui.gui_fields {
'    class GUI_Player {
''        +GUI_Player(name:String, balance:int, car:GUI_Car)
''        +getName() : String
''        +setBalance(balance:int) : void
'    }
'}

class DiceManager {
    -minDieValue : int
    -maxDieValue : int
    -rand : Random

    +createDiceCup() : DiceCup
}

class DiceCup {
    -die1 : Die
    -die2 : Die

    +DiceCup()
    +raffleCup() : void
    +getDiceValues() : int[]
    +getSum() : int
    +isSimilar() : boolean
}

class Die {
    -faceValue : int

    +raffle() : void
    +getValue() : int
}

class PlayerManager {
    -playerStartMoney : int
    -players : HashMap<Integer, Player, Position>

    +createPlayer(gm:GUIManager) : Player
}

class Player {
    -name : String
    -money : int
    -guiPlayer : GUI_Player

    +Player(gm:GUIManager)
    +setMoney(newPoints:int) : void
    +getName() : String
}
class AccountManager {
    -accounts: HashMap<Integer, accountID, balance>
    +createAccount() : Account
    +getAccount(accountID: Integer) : Account

}
class Account {
    -accountID: int
    -balance: double
    +getBalanceString() : String
    +getMoney() : Double
    +withdraw(ammount:Double) : Boolean
    +setBalance(balance:Double) : void
    +getAccountID() : String


}
class FieldManager{
    -fields: HashMap<Integer, Position, Money>
}
class Field{
    -name : String
    -money : int
    -position : int

    +getMoney(): int
    +setMoney(): void
    +getName(): string
    +setName(): void
    +getPosition(): int
    +setPosition(): void
}
MoneyDiceGame --> "1" PlayerManager
MoneyDiceGame --> "1" DiceManager
MoneyDiceGame --> "1" GUIManager
MoneyDiceGame --> "1" FieldManager
DiceManager --> "*" DiceCup
DiceCup --> "2" Die
PlayerManager --> "2" Player
FieldManager --> "12" Field
MoneyDiceGame --> "1" AccountManager
AccountManager --> "*" Account
GUIManager ..> diplomitdtu.matadorgui : <<use>>

@enduml